feat: add functionality to retrieve attributes by category ID and enhance Attribute DTOs with required fields